image overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -178,8 +178,7 @@ li::before {
   filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 0.125));
   display: flex;
   flex-direction: column;
-  gap: 1rem;
-  justify-content: center;
+  justify-content: space-between;
   height: 260px;
   width: 200px;
   text-decoration: none;
@@ -209,11 +208,12 @@ li::before {
   border-radius: 12px;
   border: 1px solid rgba(255, 255, 255, 0.25);
   background-color: #f6f6f6;
+  padding: 0.25rem;
 }
 
 .banner-image img {
   object-fit: contain;
-  height: 100%;
+  height: calc(100% - 1rem);
   width: 100%;
 }
 
